# pokemon-tcg-ai-battle

./: .gitignore  README.md  agent.py  archaludon_decision_trace.txt  archaludon_review_summary.md  archaludon_vs_megastarmie.txt  deck.csv  deck_identity.py  episode3_opponent.py  episode4_behavior_diff.py  episode4_decision_audit.py  episode4_evolve_audit.py  episode4_exam.py  episode4_graduation.py  episode4_infer_audit.py  episode4_support_explain.py  issue_tracker.py  ladder_dev_timing.py  ladder_loss_classify.py  ladder_meta.py  ladder_three_findings.py  ladder_v8_check.py  local_review_session.py  main.py  plan_review.py  pyproject.toml  qa_gate.py  qa_issues.json  replay_reviewer.py  requirements.txt
cabt_bot/: __init__.py  arena.py  cards.py  enums.py  imitation.py  meta.py  models.py  runtime_check.py  state_encoder.py
data/: cards.csv  cards.json
decks/: _tmp_ladder_ml.csv  alakazam.csv  alakazam_v2.csv  archaludon.csv  archaludon_il.csv  beartic.csv  chandelure_control.csv  comfey_control.csv  crustle_wall.csv  cynthia_garchomp.csv  deck.csv  deck_view.csv  dragapult.csv  dragapult_view.csv  froslass.csv  gardevoir.csv  iwapa.csv  iwapa.txt  iwapa_view.csv  kangaskhan.csv  kangaskhan_view.csv  ladder_alakazam_v2.csv  ladder_lucario_v2.csv  ladder_profiles.json  lightning.csv  lopunny.csv  lopunny_view.csv  mega_spread.csv  mega_spread_view.csv  megaruka.csv  megaruka.txt  megaruka_view.csv  meta_comfey.csv  meta_grimmsnarl.csv  raging_bolt.csv  rocket_spidops.csv  sample_deck_view.csv  scrafty.csv
docs/: CHARTER.md  DISTILLATION.md  KNOWN_LIMITATIONS.md  (+8 more)
(+119 files in other folders)
