[project]
name = "pokemon-tcg-ai-battle"
version = "0.1.0"
description = "cabt (Pokémon TCG) 用 AI 対戦エージェントのベースコード"
requires-python = ">=3.10"
dependencies = [
    "kaggle-environments>=1.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.8", "pymupdf>=1.24"]

[tool.setuptools]
packages = ["cabt_bot", "cabt_bot.bots"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
