[project]
name = "pokemon-tcg-ai-battle"
version = "0.1.0"
description = "cabt (Pokémon TCG) 用 AI 対戦エージェントのベースコード"
requires-python = ">=3.10"
# 実行時の必須依存はなし（標準ライブラリ + 配布エンジン cg/ のみ）。
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.8"]
# kaggle-environments は Kaggle 上での提出テストに使う場合のみ。
kaggle = ["kaggle-environments>=1.14.0"]

[tool.setuptools]
packages = ["cabt_bot", "cabt_bot.bots"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
